v1/readme.md
# Project


## Требования:

Веб проект с развертыванием нескольких виртуальных машин должен отвечать следующим требованиям:
* включен https;
* основная инфраструктура в DMZ зоне;
* файрвалл на входе;
* сбор метрик и настроенный алертинг;
* везде включен selinux;
* организован централизованный сбор логов.


## Проект

Схема стенда

![Image 1](docs/stand.jpg)


### Состав проекта

- Всего: 6 хостов. 
- Метод разворачивания: Ansible (98%).
- На хостах включен файрвол (Firewalld):
	- Настроены необходимые службы и порты.
- На хостах включен SELinux:
	- Настроены необходимые контексты.
- Все хосты выходят из локальной сети через хост Router.


> Данное решение не является продакшн решением, а несет смысл демонстрации знаний полученных на курсе. 

> В данном проекте не ресмотрены проблемы отказоустойчивости.

### Хосты

Хосты | IP адрес
------| ---------
Router | 192.168.10.10
WEB (Nginx) | 192.168.10.20
MySQL (MariaDB) | 192.168.10.30
LogServer (ELK) | 192.168.10.40
Monitoring (Zabbix) | 192.168.10.50
Data (iSCSI)`*` | 192.168.10.100

`*` хост с развернутым iSCSI Target не претендует на продакш решение, а исключительно имитирует дисковое хранилище собранное на LVM Mirror. 


Для разворачивания стенда выполняем `vagrant up`. Для разворачивания каждого хоста подготовлен Ansible playbook. 


Параметры для Zabbix:

Хосты | Hostname
------| ---------
Router | router
WEB | nginx
MySQL | mysql
ELK | elk
iSCSI | iscsi

### Доступ к службам

> Для доступа к веб-проекту на Wordpress необходимо на хост машине прописать адрес роутера (Router): `192.168.10.10 airmeno.ru`.

Сервис | Адрес
------| ---------
Wordpress (Nginx+PHP-FPM) | https://192.168.10.20 (https://airmeno.ru)
ELK | http://192.168.10.40:5601
Zabbix | http://192.168.10.50/zabbix
