v3/readme.md
# Инфраструктура для проекта на Wordpress


## Требования:

Веб проект с развертыванием нескольких виртуальных машин должен отвечать следующим требованиям:
* включен https;
* основная инфраструктура в DMZ зоне;
* файрвалл на входе;
* сбор метрик и настроенный алертинг;
* везде включен selinux;
* организован централизованный сбор логов.


## Проект

Схема стенда

![Image 1](docs/stand.jpg)


### Состав проекта

- Всего: 8 хостов. 
- Метод разворачивания: Ansible.
- На хостах включен файрвол (Firewalld):
	- Настроены необходимые службы и порты.
- На хостах включен SELinux:
	- Настроены необходимые контексты.
- Все хосты выходят из локальной сети через хост Router.


> Данное решение не является продакшн решением, а несет смысл демонстрации знаний полученных на курсе. 

> В данном проекте не рассмотрены проблемы отказоустойчивости.

### Хосты

Хосты | IP адрес
------| ---------
Router | 192.168.10.10
WEB (Nginx) | 192.168.10.20
MySQL (MASTER) | 192.168.10.30
MySQL (SLAVE) | 192.168.10.35
LogServer (ELK) | 192.168.10.40
Monitoring (Zabbix) | 192.168.10.50
Data (iSCSI)`*` | 192.168.10.100
Backup (NFS Server) | 192.168.10.90

`*` хост с развернутым iSCSI Target не претендует на продакш решение, а исключительно имитирует дисковое хранилище собранное на LVM Mirror. 


Для разворачивания стенда выполняем `vagrant up`. Для разворачивания хостов подготовлен Ansible playbook. В playbook ипортируются роли, каждая роль разворачивает определенную службу (11 ролей).


Параметры для Zabbix:

Хосты | Hostname
------| ---------
Router | router
WEB | nginx
MySQL Master | mysqlmaster
MySQL Slave | mysqlslave
ELK | elk
Storage | storage
Backup | backup

### Доступ к службам

> Для доступа к веб-проекту на Wordpress необходимо на хост машине прописать адрес роутера (Router): `192.168.10.10 airmeno.ru`.

Сервис | Адрес
------| ---------
Wordpress (Nginx+PHP-FPM) | https://192.168.10.20 (https://airmeno.ru)
ELK | http://192.168.10.40:5601
Zabbix | http://192.168.10.50/zabbix


SSL сертификат для сайта - https://zerossl.com